# tagml

./: .gitignore  .setup.py.swp  LICENSE  Makefile  Makefile.in  README.md  config.h  config.h.in  config.status  configure  configure.ac  map.h  parse.h  setup.py  test_world.xml
TagML/: .TagML.py.swp  TagML.py  game.py  main.py  parser.py  player.py  worldmap.py
TagML/worldmap/: worldmap.py
WorldMap/: .WorldMap.py.swp  WorldMap.py
autom4te.cache/: output.0  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
planning/: More Detailed Plan.md  proposal.md
src/: .main.c (Hephestus's conflicted copy 2013-10-31).swp  .map.c (Hephestus's conflicted copy 2013-10-31).swp  Makefile  Makefile.am  Makefile.in  main (Hephestus's conflicted copy 2013-10-31).c  main.c  map.c  map.h  parse.c  parse.h  tagml  tagml (Hephestus's conflicted copy 2013-10-31)
src/.deps/: main.Po  map.Po  tagml-main.Po  tagml-map.Po  tagml-parse.Po
tests/: Makefile.am  map_tests.c
