###############################################################################
# Initialize Information About the Project
###############################################################################
AC_INIT([tagml], [0.1], [darobinson@clarku.edu])

###############################################################################
# Initialize Compiler Settings
###############################################################################
AM_INIT_AUTOMAKE([-Wall -Werror])
AC_PROG_CC

###############################################################################
# Initialize Header Information
###############################################################################
AC_CONFIG_HEADERS([config.h])

###############################################################################
# Initialize Makefiles
###############################################################################
AC_CONFIG_FILES([Makefile src/Makefile])

###############################################################################
# Check for dependencies
###############################################################################
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h math.h])

PKG_CHECK_MODULES([CHECK], [check >= 0.9])
PKG_CHECK_MODULES([DEPS], [libxml-2.0 >= 2.8])
###############################################################################
# Output Final Scripts
###############################################################################
AC_OUTPUT
